Solarize layout and adapt to profile website
This commit is the result of some tweaking and testing to get the new color scheme
and layout right for my new site:

 - the Solarized palette is used for background and text colors;
 - a precalculated transformation in CIELAB color space is used to create the border color;
 - the footer has been simplified to better accomodate the use case of a personal profile
   website where author name and site title are equivalent and the site description should
   not be displayed.
  
Incremental testing, reverting and revising have turned this into an unwieldy patch that needs to be cleaned up and simplified.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -1,5 +1,8 @@
 @charset "utf-8";
 
+// Import custom color scheme
+@import "solarized";
+
 // Define defaults for each variable.
 
 $base-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !default;
@@ -10,14 +13,15 @@ $base-line-height: 1.5 !default;
 
 $spacing-unit:     30px !default;
 
-$text-color:       #111 !default;
-$background-color: #fdfdfd !default;
-$brand-color:      #2a7ae2 !default;
+$text-color:       $strong-color-day !default;
+$background-color: $background-color-day !default;
+$border-color:     $border-color-day;
+$brand-color:      $blue !default;
 
-$grey-color:       #828282 !default;
-$grey-color-light: lighten($grey-color, 40%) !default;
-$grey-color-dark:  darken($grey-color, 25%) !default;
-$orange-color:     #f66a0a !default;
+$grey-color:       $base1 !default;
+$grey-color-light: $base2 !default;
+$grey-color-dark:  $base0 !default;
+$orange-color:     $orange !default;
 $table-text-align: left !default;
 
 // Width of the content area
