--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -104,15 +104,15 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: $brand-color;
+  color: $blue;
   text-decoration: none;
 
   &:visited {
-    color: darken($brand-color, 15%);
+    color: $violet;
   }
 
   &:hover {
-    color: $text-color;
+    color: $cyan;
     text-decoration: underline;
   }
 
@@ -234,21 +234,21 @@ table {
   margin-bottom: $spacing-unit;
   width: 100%;
   text-align: $table-text-align;
-  color: lighten($text-color, 18%);
+  color: $text-color;
   border-collapse: collapse;
   border: 1px solid $grey-color-light;
   tr {
     &:nth-child(even) {
-      background-color: lighten($grey-color-light, 6%);
+      background-color: $grey-color-light;
     }
   }
   th, td {
     padding: ($spacing-unit / 3) ($spacing-unit / 2);
   }
   th {
-    background-color: lighten($grey-color-light, 3%);
-    border: 1px solid darken($grey-color-light, 4%);
-    border-bottom-color: darken($grey-color-light, 12%);
+    background-color: $grey-color-light;
+    border: 1px solid $grey-color-light;
+    border-bottom-color: $grey-color;
   }
   td {
     border: 1px solid $grey-color-light;
